# fityk

./: .appveyor.yml  .gitignore  .travis.yml  AUTHORS  CITATION.cff  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  TODO  TODO.gui  autogen.sh  configure.ac  configure.in  fityk.appdata.xml  fityk.desktop  fityk.iss.in  fityk.metainfo.xml  fityk.spec.in  fityk.url  fityk.xml  pl.nieto.fityk.metainfo.xml  release  release.sh
cli/: gnuplot.cpp  gnuplot.h  main.cpp
config/: Makefile.am  readline.m4
doc/: Makefile  Makefile.am  README  appendix.rst  cmdidx.xsl  conf.py  data.rst  editlink.html  extensions.rst  fit.rst  fityk-manual.rst  fityk.1  fityk.css  fityk_ext.py  fityk_tips.txt  fitykhelp.xml  fo.xsl  getstarted.rst  help-message.txt  hh-mod.xsl  html.css  index.rst  intro.rst  lang.rst  layout.html  math.lyx  model.rst  ref.rst  requirements.txt  screens.rst  script.rst
doc/fitheme/: layout.html  side.html  theme.conf
doc/fitheme/static/: fitheme.css
doc/fitykhelp_img/: Makefile.am
doxygen/: Doxyfile  docs.h  footer.html  header.html
fityk/: CMPfit.cpp  CMPfit.h  GAfit.cpp  GAfit.h  LMfit.cpp  LMfit.h  MPfit.cpp  MPfit.h  Makefile.am  NLfit.cpp  NLfit.h  NMfit.cpp  NMfit.h  ast.cpp  ast.h  bfunc.cpp  bfunc.h  common.cpp  common.h  cparser.cpp  cparser.h  data.cpp  data.h  eparser.cpp  eparser.h  f_fcjasym.cpp  f_fcjasym.h  fit.cpp  fit.h  fityk.cpp  fityk.h  func.cpp  func.h  gauss-legendre.h  guess.cpp  guess.h  info.cpp  info.h  lexer.cpp  lexer.h  (+32 more)
fityk/cmpfit/: README  mpfit.c  mpfit.h  mpfit.patch
fityk/root/: README.md  background.cpp  background.hpp
fityk/swig/: fityk.i
fityk/wxgui/: aplot.cpp  bgm.cpp  cmn.cpp  cmn.h  dataedit.cpp  datatable.cpp  dialogs.cpp  dialogs.h  exportd.cpp  fancyrc.h  frame.cpp  frame.h  gradient.cpp  history.cpp  listptxt.cpp  modelinfo.h  mplot.cpp  plot.cpp  powdifpat.h  print.h  setdlg.cpp  setdlg.h  sgchooser.cpp  sidebar.cpp  statbar.cpp  textpane.cpp  uplot.cpp
fityk/wxgui/img/: bg_mode.xpm  color.xpm  colorsel.xpm  convert.xpm  copyfunc.xpm  correction.h  exec_selected.xpm  ok24.h  open_data_custom.xpm  radiation32.h  recordmacro16.h  reload16.h  rename.xpm  run16.h  sbprefs.h  strip_bg.xpm  zoom_all.xpm  zoom_right.xpm  zoom_vert.xpm
gsoc_xylib/: ChangeLog  Makefile  README  ReadMe.txt  TODO  common.h  ds_brucker_raw_v1.cpp  ds_brucker_raw_v1.h  ds_brucker_raw_v23.cpp  ds_brucker_raw_v23.h  ds_gsas.h  ds_pdcif.cpp  ds_pdcif.h  ds_philips_raw.cpp  ds_philips_rd.cpp  ds_philips_rd.h  ds_philips_udf.cpp  ds_philips_udf.h  ds_rigaku_dat.cpp  ds_rigaku_dat.h  ds_text.cpp  ds_text.h  ds_uxd.cpp  ds_uxd.h  ds_vamas.cpp  ds_vamas.h  ds_winspec_spe.cpp  ds_winspec_spe.h  samples.sh  testmain.cpp  testmain.h  util.cpp  util.h  xyconv.cpp  xylib.cpp  xylib.h
m4/: ac_python_devel.m4  ax_cxx_have_isfinite.m4  ax_lua.m4  ax_pkg_swig.m4  ax_python_devel.m4  readline.m4
macosx/: Info.plist.in  Makefile  README.txt  fityk.icns
python/: Makefile.am  fityk.i
samples/: Makefile.am  README  SiC_Zn.fit  cfityk.py  enso.fit  hello.c  hello.cc  hello.java  hello.lua  hello.pl  hello.py  hello.rb  nacl01.fit  read-shockley.fit  test_lib.cc  test_lib.lua  test_lib.pl  test_lib.py  test_syntax.fit
src/: GAfit.cpp  GAfit.h  LMfit.cpp  LMfit.h  MPfit.cpp  MPfit.h  Makefile.am  NLfit.cpp  NLfit.h  NMfit.cpp  NMfit.h  ast.cpp  ast.h  bfunc.cpp  bfunc.h  calc.cpp  calc.h  cmd.cpp  cmd.h  cmd2.cpp  cmd2.h  cmd3.cpp  cmd3.h  common.cpp  common.h  cparser.cpp  cparser.h  crystal.cpp  crystal.h  data.cpp  data.h  datatrans.cpp  datatrans.h  datatrans2.cpp  datatrans2.h  datatrans3.cpp  datatrans3.h  datatrans4.cpp  datatrans4.h  dotset.cpp  (+90 more)
src/cli/: Makefile.am  cfityk.py  gnuplot.cpp  gnuplot.h  main.cpp
src/img/: Makefile.am  add.xpm  add_peak.xpm  addpeak_t.xpm  addpoint.xpm  aparam.xpm  autoadd.xpm  backv.xpm  baseline_t.xpm  bg_mode.xpm  center.xpm  clear.xpm  clickadd.xpm  close.xpm  convert.xpm  copyfunc.xpm  delpeak.xpm  delpoint.xpm  dpane.xpm  dpsize.xpm  dump.xpm  edit_data.xpm  editf.xpm  execute.xpm  exportb.xpm  exportd.xpm  fitcont.xpm  fitrun.xpm  fitundo.xpm  fityk.xpm  freeze.xpm  fwhm.xpm  gparam.xpm  height.xpm  hwhm.xpm  importb.xpm  info.xpm  left_2arrows.xpm  left_arrow.xpm  leftscroll.xpm  (+29 more)
src/swig/: fityk.i
src/wxgui/: Makefile.am  about.cpp  about.h  aplot.cpp  aplot.h  app.cpp  app.h  atomtables.c  atomtables.h  bgm.cpp  bgm.h  callback.h  ceria.cpp  ceria.h  cmn.cpp  cmn.h  dataedit.cpp  dataedit.h  datatable.cpp  datatable.h  defmgr.cpp  defmgr.h  dialogs.cpp  dialogs.h  dlgs.cpp  dlgs.h  dload.cpp  dload.h  editor.cpp  editor.h  exportd.cpp  exportd.h  fancyrc.cpp  fancyrc.h  fitinfo.cpp  fitinfo.h  frame.cpp  frame.h  gradient.cpp  gradient.h  (+60 more)
src/wxgui/img/: Makefile.am  active_mode.xpm  add.xpm  add_peak.xpm  addpeak_mode.xpm  bin2c.c  bug16.h  color.xpm  colorsel.xpm  cont_fit.xpm  down_arrow.xpm  editor16.h  eq_fwhm.h  exec_down.xpm  exec_selected.xpm  fileopen16.h  filereload16.h  filesaveas16.h  filter.xpm  fityk.xpm  fityk96.h  function16.h  goto.xpm  info16.h  info32.h  lock.xpm  lock_open.xpm  manual.xpm  mouse_l.xpm  mouse_r.xpm  peak32.h  powdifpat16.xpm  powdifpat48.xpm  redo16.h  revert16.h  right_pane.xpm  rubik32.h  run32.h  run_fit.xpm  run_script.xpm  (+19 more)
swig/: Makefile.am  fityk.i
tests/: catch.cpp  gradient.cpp  guess.cpp  lua.cpp  mpfit_deriv.cpp  num.cpp  psvoigt.cpp  test_data_load.py  test_guess.py  test_info.py  test_model.py  test_nist.py  test_syntax.fit  test_tranform.py
wxgui/: Makefile.am  about.cpp  about.h  aplot.cpp  aplot.h  app.cpp  app.h  atomtables.c  atomtables.h  bgm.cpp  bgm.h  ceria.cpp  (+68 more)
xylib/: Makefile.am  README  TODO  configure.ac  sample-urls  samples.sh  web.css  xyconv.1  xyconv.cpp  xylib_capi.py
xylib/xylib/: Makefile.am  brucker_raw.cpp  cache.cpp  cache.h  canberra_mca.cpp  canberra_mca.h  cpi.cpp  dbws.cpp  dbws.h  gsas.cpp  pdcif.cpp  philips_raw.cpp  philips_raw.h  philips_udf.cpp  riet7.cpp  rigaku_dat.cpp  text.cpp  util.cpp  util.h  uxd.cpp  vamas.cpp  vamas.h  winspec_spe.cpp  xfit_xdd.cpp  xylib.cpp  xylib.h
(+167 files in other folders)
